--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>SmartNet</title>
   </head>
   <body>
-    <p>This is the SmartNet Project website.</p>
+    <h1>This is the SmartNet Project website.</h1>
   </body>
 </html>
