--- a/index.html
+++ b/index.html
@@ -396,11 +396,19 @@
 
         <div class="row" data-aos="zoom-out">
           <div class="col-lg-9 text-center text-lg-left">
-            <h3>Call To Action</h3>
-            <p> Call To Action.</p>
+            <h3>Call For Papers</h3>
+            <p> 4<sup>th</sup> Workshop on Blockchains for Inter-Organizational Collaboration (BIOC'21) **** 21 June
+              2021 **** <br> will be held in conjunction with 10<sup>th</sup> International Conference on Model and Data
+              Engineering (MEDI'2021) <br> *** 21-23 June 2021 *** Tallinn, Estonia.
+            </p>
+
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Call To Action</a>
+            <a class="cta-btn align-middle"
+              href="https://www.taltech.ee/events/4th-workshop-blockchains-inter-organizational-collaboration-bioc21"
+              class="btn-buy" target="_blank" rel="noopener noreferrer">Call For Paper</a>
+
+
           </div>
         </div>
 
@@ -652,9 +660,7 @@
 
           <div class="testimonial-item">
             <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium
-              quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>   
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
             <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
