--- a/index.html
+++ b/index.html
@@ -660,7 +660,10 @@
 
           <div class="testimonial-item">
             <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>   
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              If the Next Generation Internet is to make the best of the internet we have, to the benefit of all, while
+              weeding out the less desirable elements, we need to put our heads together.
+
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
             <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
@@ -671,8 +674,10 @@
           <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis
-              quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+              Join the #InternetOfHumans with pioneers, entrepreneurs, researchers, and innovators. Get funding on
+              blockchain, distributed ledger technologies, artificial intelligence, digital identities, open-source, and
+              more.
+
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
             <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
@@ -683,20 +688,22 @@
           <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor
-              labore quem eram duis noster aute amet eram fore quis sint minim.
+              In the area of open innovation, the NGI Explorers programme emerged as a great opportunity for RKL
+              Integral as a startup and for myself as an “NGI Explorer”.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-            <h3>Jena Karlis</h3>
-            <h4>Store Owner</h4>
+            <img src="assets/img/testimonials/testimonials-31.jpg" class="testimonial-img" alt="">
+            <h3>Iñaki Eguia</h3>
+            <h4>NGI Explorer</h4>
           </div>
 
           <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim
-              dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+              Building a European initiative for a Human Internet that respects the fundamental values of privacy,
+              participation and diversity. The Next Generation Internet offers new functionalities to support people’s
+              needs and to address global sustainability challenges.
+
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
             <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
@@ -707,8 +714,8 @@
           <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa
-              labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+              The NGI is dedicated to foster a vibrant Open Internet movement that links research, policy, and society
+              for the benefit of society.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
             <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
