--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
         <ul class="faq-list">
 
           <li data-aos="fade-up" data-aos-delay="100">
-            <a data-bs-toggle="collapse" class="" data-bs-target="#faq1">Authored 1
+            <a data-bs-toggle="collapse" class="" data-bs-target="#faq1">Coming Soon
               <i class="icofont-simple-up"></i></a>
             <div id="faq1" class="collapse show" data-bs-parent=".faq-list">
               <p>
@@ -943,7 +943,7 @@
           </li>
 
           <li data-aos="fade-up" data-aos-delay="200">
-            <a data-bs-toggle="collapse" data-bs-target="#faq2" class="collapsed">Authored 2 <i
+            <a data-bs-toggle="collapse" data-bs-target="#faq2" class="collapsed">Coming Soon <i
                 class="icofont-simple-up"></i></a>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
               <p>
@@ -953,7 +953,7 @@
           </li>
 
           <li data-aos="fade-up" data-aos-delay="300">
-            <a data-bs-toggle="collapse" data-bs-target="#faq3" class="collapsed">Authored 3 <i
+            <a data-bs-toggle="collapse" data-bs-target="#faq3" class="collapsed">Coming Soon <i
                 class="icofont-simple-up"></i></a>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
@@ -963,7 +963,7 @@
           </li>
 
           <li data-aos="fade-up" data-aos-delay="400">
-            <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Authored 4 <i
+            <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Coming Soon <i
                 class="icofont-simple-up"></i></a>
             <div id="faq4" class="collapse" data-bs-parent=".faq-list">
               <p>
@@ -973,7 +973,7 @@
           </li>
 
           <li data-aos="fade-up" data-aos-delay="500">
-            <a data-bs-toggle="collapse" data-bs-target="#faq5" class="collapsed">Authored 5 <i
+            <a data-bs-toggle="collapse" data-bs-target="#faq5" class="collapsed">Coming Soon <i
                 class="icofont-simple-up"></i></a>
             <div id="faq5" class="collapse" data-bs-parent=".faq-list">
               <p>
@@ -983,7 +983,7 @@
           </li>
 
           <li data-aos="fade-up" data-aos-delay="600">
-            <a data-bs-toggle="collapse" data-bs-target="#faq6" class="collapsed">Authored 6 <i
+            <a data-bs-toggle="collapse" data-bs-target="#faq6" class="collapsed">Coming Soon <i
                 class="icofont-simple-up"></i></a>
             <div id="faq6" class="collapse" data-bs-parent=".faq-list">
               <p>
@@ -997,7 +997,7 @@
           <p>Public Delivrables</p>
           <ul class="faq-list">
             <li data-aos="fade-up" data-aos-delay="400">
-              <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Authored 4 <i
+              <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Coming Soon <i
                   class="icofont-simple-up"></i></a>
               <div id="faq4" class="collapse" data-bs-parent=".faq-list">
                 <p>
@@ -1012,7 +1012,7 @@
           <p>Brochures et Flyers</p>
           <ul class="faq-list">
             <li data-aos="fade-up" data-aos-delay="400">
-              <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Authored 4 <i
+              <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Coming Soon <i
                   class="icofont-simple-up"></i></a>
               <div id="faq4" class="collapse" data-bs-parent=".faq-list">
                 <p>
@@ -1026,7 +1026,7 @@
           <p>Outreach</p>
           <ul class="faq-list">
             <li data-aos="fade-up" data-aos-delay="400">
-              <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Authored 4 <i
+              <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Coming Soon <i
                   class="icofont-simple-up"></i></a>
               <div id="faq4" class="collapse" data-bs-parent=".faq-list">
                 <p>
@@ -1042,7 +1042,7 @@
           <p>Software</p>
           <ul class="faq-list">
             <li data-aos="fade-up" data-aos-delay="400">
-              <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Authored 4 <i
+              <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Coming Soon <i
                   class="icofont-simple-up"></i></a>
               <div id="faq4" class="collapse" data-bs-parent=".faq-list">
                 <p>
@@ -1057,7 +1057,7 @@
           <p>DataSets</p>
           <ul class="faq-list">
             <li data-aos="fade-up" data-aos-delay="400">
-              <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Authored 4 <i
+              <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Coming Soon <i
                   class="icofont-simple-up"></i></a>
               <div id="faq4" class="collapse" data-bs-parent=".faq-list">
                 <p>
@@ -1258,22 +1258,23 @@
 
       </p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/NGI_Explorers" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/NGI4EU/" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/ngi4eu/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.youtube.com/channel/UCafmIQ_fwe_FiwiiYj6QLUA" class="bx bxl-youtube"><i
+            class="bi bi-youtube"></i></a>
+        <a href="https://www.linkedin.com/groups/2206279" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
-      <div class="copyright">
+      <!--       <div class="copyright">
         &copy; Copyright <strong><span>SmartNet</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/selecao-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+      </div> -->
+      <!-- <div class="credits"> -->
+      <!-- All the links in the footer should remain intact. -->
+      <!-- You can delete the links only if you purchased the pro version. -->
+      <!-- Licensing information: https://bootstrapmade.com/license/ -->
+      <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/selecao-bootstrap-template/ -->
+      <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+      <!-- </div> -->
     </div>
   </footer><!-- End Footer -->
 
