--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>SmartNet</title>
+  <title>Portfolio Details - Selecao Bootstrap Template</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -14,9 +14,7 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -47,7 +45,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html">SmartNet</a></h1>
+        <h1 class="text-light"><a href="index.html">Selecao</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -55,33 +53,33 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#about">Project Overview</a></li>
-          <li><a href="#services">Work Packages</a></li>
-          <li><a href="#portfolio">Computing platform</a></li>
-          <li><a href="#pricing">Events & News</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#pricing">Pricing</a></li>
           <li><a href="#team">Team</a></li>
-
-          <li class="drop-down"><a href="">Dissemination</a>
+          <li class="drop-down"><a href="">Drop Down</a>
             <ul>
-              <li><a href="#">Brochures et Flyers</a></li>
-              <li class="drop-down"><a href="#">Scientific publications</a>
+              <li><a href="#">Drop Down 1</a></li>
+              <li class="drop-down"><a href="#">Drop Down 2</a>
                 <ul>
-                  <li><a href="#">Journals And Conference Proceedings</a></li>
-                  <li><a href="#">Public deliverables</a></li>
-                  <li><a href="#">Outreach</a></li>
-                  <li><a href="#">Software</a></li>
-                  <li><a href="#">DataSets</a></li>
+                  <li><a href="#">Deep Drop Down 1</a></li>
+                  <li><a href="#">Deep Drop Down 2</a></li>
+                  <li><a href="#">Deep Drop Down 3</a></li>
+                  <li><a href="#">Deep Drop Down 4</a></li>
+                  <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
               </li>
-              <li><a href="#">Multimedia</a></li>
-              <li><a href="#">Stories</a></li>
-              <li><a href="#">Newsletters</a></li>
+              <li><a href="#">Drop Down 3</a></li>
+              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="#">Drop Down 5</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Get involved</a></li>
+          <li><a href="#contact">Contact</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
+
     </div>
   </header><!-- End Header -->
 
@@ -92,10 +90,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Computing platform</h2>
+          <h2>Portfolio Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Testbed Details</li>
+            <li>Portfolio Details</li>
           </ol>
         </div>
 
@@ -109,27 +107,28 @@
         <div class="portfolio-details-container" data-aos="fade-up">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/portfolio/portfolio-details-1.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/portfolio-details-2.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/portfolio-details-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/blockchain.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/pi1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/supercomputer.png" class="img-fluid" alt="">
           </div>
 
-          <div class="portfolio-info">
-            <h3>Project information</h3>
-            <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
-            </ul>
-          </div>
+            <div class="portfolio-info">
+              <h3>Project information</h3>
+              <ul>
+                <li><strong>Category</strong>: NEXT GENERATION INTERNET</li>
+                <li><strong>Explorer</strong>: Akram Hakiri</li>
+                <li><strong>Project date</strong>: 01 January 2021</li>
+                <li><strong>Project URL</strong>: <a href="https://hakiri.github.io/smartnet/index.html">SmartNet</a>
+                </li>
+              </ul>
+            </div>
 
         </div>
 
         <div class="portfolio-description">
-          <h2>This is an example of testbed detail</h2>
+          <h2>This is an example of portfolio detail</h2>
           <p>
-            Testbed description goes here.
+            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
           </p>
         </div>
 
@@ -141,8 +140,8 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>SmartNet</h3>
-      <p>Building an Intelligent System for Cognitive Edge Network Programmability and Autonomous Adaptability.</p>
+      <h3>Selecao</h3>
+      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
