--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
           <li><a href="#about">Project Overview</a></li>
           <li><a href="#services">Work Packages</a></li>
           <li><a href="#portfolio">Platform</a></li>
-          <!-- <li><a href="#pricing">Events & News</a></li> -->
           <li class="drop-down"><a href="#pricing">Events</a>
             <ul>
               <li><a href="#testimonials">Stories</a></li>
@@ -777,8 +776,9 @@
                 <li>Acceptance notification: <b>May 15<sup>th</sup>, 2021</b></li>
                 <li>Camera-ready: <b>June 9<sup>th</sup> 2021</b></li>
                 <li>Workshop: <b>June 21<sup>st</sup> 2021</b></li>
-                <!-- <li class="na">Massa ultricies mi</li> -->
               </ul>
+              <ul>
+              <li>held in conjunction with MEDI2021</li></ul>
               <div class="btn-wrap">
                 <a href="https://www.taltech.ee/events/4th-workshop-blockchains-inter-organizational-collaboration-bioc21"
                   class="btn-buy" target="_blank" rel="noopener noreferrer">Learn more</a>
@@ -788,16 +788,25 @@
 
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="200">
-              <h3>Cyber-Physical Systems and Internet-of-Things Week</h3>
-              <h4><sup>2021 CPS-IOT Week</sup></h4>
-              <ul>
-                <li>Paper Submission: <b>October 26, 2020</b></li>
-                <li>Workshops/Tutorials: <b>May 18, 2021</b> </li>
-                <li>Conferences: <b>May 19-21, 2021</b> </li>
+              <h3> ACM International Workshop on Software Defined Networks &amp; Network Function Virtualization Security</h3>
 
+              <h4><sup>SDN-NFV Sec 2021</sup></h4>
+              <ul>
+                <li>Paper Submission: <b>February 01, 2021</b></li>
+                <li>Notification of Acceptance: <b>February 15, 2021</b></li>
+                <li>Camera Ready Submission Deadline: <b>February 24, 2021</b></li>
+                <li>Workshop Date: <b>April 28, 2021</b> </li>
+              </ul>
+              <ul>
+                <li>
+                  <ul>
+                     <a href="http://www.codaspy.org/2021/">In conjunction with the 11th ACM Conference on Data and
+                       Application Security and Privacy (ACM CODASPY 2021)</a>
+                    
+                </li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://cps-iot-week2021.isis.vanderbilt.edu/index.html" class="btn-buy" target="_blank"
+                <a href="http://acm-sdn-nfv-sec.com/" class="btn-buy" target="_blank"
                   rel="noopener noreferrer">Learn more</a>
               </div>
             </div>
@@ -805,7 +814,6 @@
 
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="300">
-              <!-- <span class="advanced">Advanced</span> -->
               <h3>20 <sup>th</sup>IFIP Networking Conference</h3>
               <h4><sup>IFIP Networking 2021</sup></h4>
               <ul>
@@ -1256,25 +1264,13 @@
             src="assets/img/image-asset.png" alt="" class="img-fluid"></a>
       </div>
 
-      </p>
       <div class="social-links">
-        <a href="https://twitter.com/NGI_Explorers" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/NGI4EU/" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/ngi4eu/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://www.youtube.com/channel/UCafmIQ_fwe_FiwiiYj6QLUA" class="bx bxl-youtube"><i
-            class="bi bi-youtube"></i></a>
-        <a href="https://www.linkedin.com/groups/2206279" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/NGI_Explorers" class="twitter"><em class="bx bxl-twitter"></em></a>
+        <a href="https://www.facebook.com/NGI4EU/" class="facebook"><em class="bx bxl-facebook"></em></a>
+        <a href="https://www.instagram.com/ngi4eu/" class="instagram"><em class="bx bxl-instagram"></em></a>
+        <a href="https://www.youtube.com/channel/UCafmIQ_fwe_FiwiiYj6QLUA" class="bx bxl-youtube"><em class="bi bi-youtube"></em></a>
+        <a href="https://www.linkedin.com/groups/2206279" class="linkedin"><em class="bx bxl-linkedin"></em></a>
       </div>
-      <!--       <div class="copyright">
-        &copy; Copyright <strong><span>SmartNet</span></strong>. All Rights Reserved
-      </div> -->
-      <!-- <div class="credits"> -->
-      <!-- All the links in the footer should remain intact. -->
-      <!-- You can delete the links only if you purchased the pro version. -->
-      <!-- Licensing information: https://bootstrapmade.com/license/ -->
-      <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/selecao-bootstrap-template/ -->
-      <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-      <!-- </div> -->
     </div>
   </footer><!-- End Footer -->
 
