--- a/inner-page.html
+++ b/inner-page.html
@@ -55,27 +55,28 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">Project Overview</a></li>
           <li><a href="#services">Work Packages</a></li>
-          <li><a href="#portfolio">Computing platform</a></li>
-          <li><a href="#pricing">Events & News</a></li>
-          <li><a href="#team">Team</a></li>
-
-          <li class="drop-down"><a href="">Dissemination</a>
+          <li><a href="#portfolio">Platform</a></li>
+          <li class="drop-down"><a href="#pricing">Events</a>
             <ul>
-              <li><a href="#">Brochures et Flyers</a></li>
-              <li class="drop-down"><a href="#">Scientific publications</a>
-                <ul>
-                  <li><a href="#">Journals And Conference Proceedings</a></li>
-                  <li><a href="#">Public deliverables</a></li>
-                  <li><a href="#">Outreach</a></li>
-                  <li><a href="#">Software</a></li>
-                  <li><a href="#">DataSets</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Multimedia</a></li>
-              <li><a href="#">Stories</a></li>
-              <li><a href="#">Newsletters</a></li>
+              <li><a href="#testimonials">Stories</a></li>
+              <li><a href="#pricing">Newsletters</a></li>
+              <li><a href="#media">Multimedia</a></li>
+
+            </ul>
+
+          </li>
+          <li class="drop-down"><a href="#faq">Dissemination</a>
+            <ul>
+              <li><a href="#publications">Journals And Conference Proceedings</a></li>
+              <li><a href="#delivrable">Public deliverables</a></li>
+              <li><a href="#brochure">Brochures et Flyers</a></li>
+              <li><a href="#outreach">Outreach</a></li>
+              <li><a href="#software">Software</a></li>
+              <li><a href="#dataset">DataSets</a></li>
             </ul>
           </li>
+          <li><a href="#team">Team</a></li>
+
           <li><a href="#contact">Get involved</a></li>
 
         </ul>
@@ -113,27 +114,22 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-    <div class="container">
-      <h3>SmartNet</h3>
-      <p>Building an Intelligent System for Cognitive Edge Network Programmability and Autonomous Adaptability.</p>
-      <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
-      <div class="copyright">
-        &copy; Copyright <strong><span>Selecao</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/selecao-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
+     <div class="container">
+       <h3>SmartNet</h3>
+       <div style="background-color: #4a5366ec;">
+         <a href="https://explorers.ngi.eu/" target="_blank" rel="noopener noreferrer"><img
+             src="assets/img/image-asset.png" alt="" class="img-fluid"></a>
+       </div>
+
+       <div class="social-links">
+         <a href="https://twitter.com/NGI_Explorers" class="twitter"><em class="bx bxl-twitter"></em></a>
+         <a href="https://www.facebook.com/NGI4EU/" class="facebook"><em class="bx bxl-facebook"></em></a>
+         <a href="https://www.instagram.com/ngi4eu/" class="instagram"><em class="bx bxl-instagram"></em></a>
+         <a href="https://www.youtube.com/channel/UCafmIQ_fwe_FiwiiYj6QLUA" class="bx bxl-youtube"><em
+             class="bi bi-youtube"></em></a>
+         <a href="https://www.linkedin.com/groups/2206279" class="linkedin"><em class="bx bxl-linkedin"></em></a>
+       </div>
+     </div>
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top"><i class="ri-arrow-up-line"></i></a>
