--- a/inner-page.html
+++ b/inner-page.html
@@ -47,7 +47,7 @@
       <div class="logo">
         <h1 class="text-light"><a href="index.html">SmartNet</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
