--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -47,7 +47,7 @@
       <div class="logo">
         <h1 class="text-light"><a href="index.html">Selecao</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+         <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -143,11 +143,11 @@
       <h3>Selecao</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="#" class="twitter"><em class="bx bxl-twitter"></em></a>
+        <a href="#" class="facebook"><em class="bx bxl-facebook"></em></a>
+        <a href="#" class="instagram"><em class="bx bxl-instagram"></em></a>
+        <a href="#" class="google-plus"><em class="bx bxl-skype"></em></a>
+        <a href="#" class="linkedin"><em class="bx bxl-linkedin"></em></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Selecao</span></strong>. All Rights Reserved
@@ -162,7 +162,7 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top"><i class="ri-arrow-up-line"></i></a>
+  <a href="#" class="back-to-top"><em class="ri-arrow-up-line"></em></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
