--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
               </ul>
               <ul>
                 <li>
-                  <ul>
+                 
                      <a href="http://www.codaspy.org/2021/">In conjunction with the 11th ACM Conference on Data and
                        Application Security and Privacy (ACM CODASPY 2021)</a>
                     
@@ -846,8 +846,7 @@
         <div class="container">
           <div class="row no-gutters">
             <div class="col-md-4">
-              <iframe class="embed-responsive-item" width="410" height="230"
-                src="https://www.youtube.com/embed/xR2ekqdK5EI" frameborder="0"></iframe>
+              <iframe class="embed-responsive-item" width="410" height="230" src="https://www.youtube.com/embed/xR2ekqdK5EI"></iframe>
             </div>
             <div class="col-md-4">
               <iframe width="424" height="238" src="https://www.youtube.com/embed/Jpi338SyKLY" frameborder="0"
