--- a/inner-page.html
+++ b/inner-page.html
@@ -132,7 +132,7 @@
      </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top"><i class="ri-arrow-up-line"></i></a>
+  <a href="#" class="back-to-top"><em class="ri-arrow-up-line"></em></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
