--- a/index.html
+++ b/index.html
@@ -144,18 +144,18 @@
     </div>
 
     <svg class="hero-waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-      viewBox="0 24 150 28 " preserveAspectRatio="none">
+      viewbox="0 24 150 28 " preserveaspectratio="none">
       <defs>
-        <path id="wave-path" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z">
+        <path id="wave-path" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path>
       </defs>
       <g class="wave1">
-        <use xlink:href="#wave-path" x="50" y="3" fill="rgba(255,255,255, .1)">
+        <use xlink:href="#wave-path" x="50" y="3" fill="rgba(255,255,255, .1)"></use>
       </g>
       <g class="wave2">
-        <use xlink:href="#wave-path" x="50" y="0" fill="rgba(255,255,255, .2)">
+        <use xlink:href="#wave-path" x="50" y="0" fill="rgba(255,255,255, .2)"></use>
       </g>
       <g class="wave3">
-        <use xlink:href="#wave-path" x="50" y="9" fill="#fff">
+        <use xlink:href="#wave-path" x="50" y="9" fill="#fff"></use>
       </g>
     </svg>
 
@@ -405,7 +405,7 @@
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle"
               href="https://www.taltech.ee/events/4th-workshop-blockchains-inter-organizational-collaboration-bioc21"
-              class="btn-buy" target="_blank" rel="noopener noreferrer">Call For Paper</a>
+               target="_blank" rel="noopener noreferrer">Call For Paper</a>
 
 
           </div>
@@ -768,7 +768,7 @@
             <div class="box featured" data-aos="zoom-in" data-aos-delay="100">
               <h3> 4<sup>th</sup> Workshop on Blockchains for Inter-
                 Organizational Collaboration
-                <Title>held in conjunction with MEDI2021</Title>
+                <title>held in conjunction with MEDI2021</title>
               </h3>
               <h4>BIOC'21</h4>
               <ul>
@@ -921,12 +921,9 @@
             <div class="col-md-4">
               <img src="//placehold.it/1170x658" class="img-fluid">
             </div>
-          </div>
+          </div>-->
+        </div> 
         </div>
- -->
-        </div>
-
-
     </section>
     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq">
@@ -1004,9 +1001,9 @@
           <p>Public Delivrables</p>
           <ul class="faq-list">
             <li data-aos="fade-up" data-aos-delay="400">
-              <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Coming Soon <i
+              <a data-bs-toggle="collapse" data-bs-target="#faq41" class="collapsed">Coming Soon <i
                   class="icofont-simple-up"></i></a>
-              <div id="faq4" class="collapse" data-bs-parent=".faq-list">
+              <div id="faq41" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Citation 4.
                 </p>
@@ -1019,9 +1016,9 @@
           <p>Brochures et Flyers</p>
           <ul class="faq-list">
             <li data-aos="fade-up" data-aos-delay="400">
-              <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Coming Soon <i
+              <a data-bs-toggle="collapse" data-bs-target="#faq42" class="collapsed">Coming Soon <i
                   class="icofont-simple-up"></i></a>
-              <div id="faq4" class="collapse" data-bs-parent=".faq-list">
+              <div id="faq42" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Citation 4.
                 </p>
@@ -1033,9 +1030,9 @@
           <p>Outreach</p>
           <ul class="faq-list">
             <li data-aos="fade-up" data-aos-delay="400">
-              <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Coming Soon <i
+              <a data-bs-toggle="collapse" data-bs-target="#faq43" class="collapsed">Coming Soon <i
                   class="icofont-simple-up"></i></a>
-              <div id="faq4" class="collapse" data-bs-parent=".faq-list">
+              <div id="faq43" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Citation 4.
                 </p>
@@ -1049,9 +1046,9 @@
           <p>Software</p>
           <ul class="faq-list">
             <li data-aos="fade-up" data-aos-delay="400">
-              <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Coming Soon <i
+              <a data-bs-toggle="collapse" data-bs-target="#faq44" class="collapsed">Coming Soon <i
                   class="icofont-simple-up"></i></a>
-              <div id="faq4" class="collapse" data-bs-parent=".faq-list">
+              <div id="faq44" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Citation 4.
                 </p>
@@ -1064,9 +1061,9 @@
           <p>DataSets</p>
           <ul class="faq-list">
             <li data-aos="fade-up" data-aos-delay="400">
-              <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Coming Soon <i
+              <a data-bs-toggle="collapse" data-bs-target="#faq45" class="collapsed">Coming Soon <i
                   class="icofont-simple-up"></i></a>
-              <div id="faq4" class="collapse" data-bs-parent=".faq-list">
+              <div id="faq45" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Citation 4.
                 </p>
