--- a/index.html
+++ b/index.html
@@ -937,22 +937,30 @@
         <ul class="faq-list">
 
           <li data-aos="fade-up" data-aos-delay="100">
-            <a data-bs-toggle="collapse" class="" data-bs-target="#faq1">Coming Soon
-              <i class="icofont-simple-up"></i></a>
+            <a data-bs-toggle="collapse" class="" data-bs-target="#faq1">ACM SDN-NFV Sec 2021 <i class="icofont-simple-up"></i></a>
             <div id="faq1" class="collapse show" data-bs-parent=".faq-list">
               <p>
-                Citation 1.
+                Akram Hakiri and Behnam Dezfouli. Towards A Blockchain-SDN Architecture for Secure
+                and Trustworthy 5G Massive IoT Network. 2021 ACM International Workshop on Software 
+                Defined Networks & Network Function Virtualization Security (SDN-NFV Sec 2021). 
+                In conjunction with ACM CODASPY 2021. April 28, 2021 - Online. 
+                <a                  href="pdf/ACM-Sec2021.pdf">PDF.</a>              
               </p>
             </div>
           </li>
 
           <li data-aos="fade-up" data-aos-delay="200">
-            <a data-bs-toggle="collapse" data-bs-target="#faq2" class="collapsed">Coming Soon <i
+            <a data-bs-toggle="collapse" data-bs-target="#faq2" class="collapsed">Book Chapter<i
                 class="icofont-simple-up"></i></a>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Citation 2.
+                Akram Hakiri and Behnam Dezfouli. A Blockchain-Oriented SDN-aware Architecture
+                for a Scalable Communication in IoT Network. Book Chapter in BLOCKCHAIN BASED 
+                INTERNET OF THINGS: Algorithms, Artichectures and Applications. Publisher: Springer 
+                Lecture Notes on Data Engineering and Communications Technologies.
+                <a href="pdf/BookChapter.pdf">PDF.</a>
               </p>
+                
             </div>
           </li>
 
