adc pdf placeholder

--- a/index.html
+++ b/index.html
@@ -969,7 +969,8 @@
                 class="icofont-simple-up"></i></a>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Citation 3
+                <embed src="pdf/Placeholder-PDF.pdf" type="application/pdf" width="100%"
+							height="800px" />
               </p>
             </div>
           </li>
@@ -979,7 +980,7 @@
                 class="icofont-simple-up"></i></a>
             <div id="faq4" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Citation 4.
+                <embed src="pdf/Placeholder-PDF.pdf" type="application/pdf" width="100%" height="800px" />
               </p>
             </div>
           </li>
@@ -989,7 +990,7 @@
                 class="icofont-simple-up"></i></a>
             <div id="faq5" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Citation 5.
+                <embed src="pdf/Placeholder-PDF.pdf" type="application/pdf" width="100%" height="800px" />
               </p>
             </div>
           </li>
@@ -999,7 +1000,7 @@
                 class="icofont-simple-up"></i></a>
             <div id="faq6" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Citation 6.
+                <embed src="pdf/Placeholder-PDF.pdf" type="application/pdf" width="100%" height="800px" />
               </p>
             </div>
           </li>
@@ -1013,7 +1014,7 @@
                   class="icofont-simple-up"></i></a>
               <div id="faq41" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Citation 4.
+                  <embed src="pdf/Placeholder-PDF.pdf" type="application/pdf" width="100%" height="800px" />
                 </p>
               </div>
             </li>
@@ -1028,7 +1029,7 @@
                   class="icofont-simple-up"></i></a>
               <div id="faq42" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Citation 4.
+                  <embed src="pdf/Placeholder-PDF.pdf" type="application/pdf" width="100%" height="800px" />
                 </p>
               </div>
             </li>
