--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
 
         </div>
         <div id="brochure" class="section-title" data-aos="zoom-out">
-          <p>Brochures et Flyers</p>
+          <p><b>Brochures et Flyers</b></p>
           <ul class="faq-list">
             <li data-aos="fade-up" data-aos-delay="400">
               <a data-bs-toggle="collapse" data-bs-target="#faq42" class="collapsed">Coming Soon <i
@@ -1036,7 +1036,7 @@
           </ul>
         </div>
         <div id="outreach" class="section-title" data-aos="zoom-out">
-          <p>Outreach</p>
+          <p><b>Outreach</b></p>
           <ul class="faq-list">
             <li data-aos="fade-up" data-aos-delay="400">
               <a data-bs-toggle="collapse" data-bs-target="#faq43" class="collapsed">Coming Soon <i
@@ -1052,7 +1052,7 @@
         </div>
         <div id="software" class="section-title" data-aos="zoom-out">
 
-          <p>Software</p>
+          <p><b>Software</b></p>
           <ul class="faq-list">
             <li data-aos="fade-up" data-aos-delay="400">
               <a data-bs-toggle="collapse" data-bs-target="#faq44" class="collapsed">Coming Soon <i
