--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                             <!-- <p>
                                 Akram Hakiri and Behnam Dezfouli. Towards A Blockchain-SDN Architecture for Secure and Trustworthy 5G Massive IoT Network. 2021 ACM International Workshop on Software Defined Networks & Network Function Virtualization Security (SDN-NFV Sec 2021). In conjunction
                                 with ACM CODASPY 2021. April 28, 2021 - Online.
-                                <a href="pdf/ACM-Sec2021.pdf" target="_blank">PDF.</a>
+                                <a href="pdf/Placeholder-PDF.pdf" target="_blank">PDF.</a>
                             </p> -->
                         </div>
                     </li>
@@ -845,7 +845,7 @@
                                 <!--
                                 Akram Hakiri and Behnam Dezfouli. A Blockchain-Oriented SDN-aware Architecture for a Scalable Communication in IoT Network. Book Chapter in BLOCKCHAIN BASED INTERNET OF THINGS: Algorithms, Artichectures and Applications. Publisher: Springer Lecture Notes
                                 on Data Engineering and Communications Technologies.
-                                <a href="pdf/BookChapter.pdf" target="_blank">PDF.</a>
+                                <a href="pdf/Placeholder-PDF.pdf" target="_blank">PDF.</a>
                        -->
 
                                 Coming soon !
