--- a/index.html
+++ b/index.html
@@ -830,11 +830,11 @@
                         <a data-bs-toggle="collapse" class="" data-bs-target="#faq1"><b>ACM SDN-NFV Sec 2021 </b><i
                 class="icofont-simple-up"></i></a>
                         <div id="faq1" class="collapse show" data-bs-parent=".faq-list">
-                            <!-- <p>
-                                Akram Hakiri and Behnam Dezfouli. Towards A Blockchain-SDN Architecture for Secure and Trustworthy 5G Massive IoT Network. 2021 ACM International Workshop on Software Defined Networks & Network Function Virtualization Security (SDN-NFV Sec 2021). In conjunction
-                                with ACM CODASPY 2021. April 28, 2021 - Online.
-                                <a href="pdf/Placeholder-PDF.pdf" target="_blank">PDF.</a>
-                            </p> -->
+                            <p>
+                            <!--    Akram Hakiri and Behnam Dezfouli. Towards A Blockchain-SDN Architecture for Secure and Trustworthy 5G Massive IoT Network. 2021 ACM International Workshop on Software Defined Networks & Network Function Virtualization Security (SDN-NFV Sec 2021). In conjunction
+                                with ACM CODASPY 2021. April 28, 2021 - Online. -->
+                              <!--      <a href="pdf/Placeholder-PDF.pdf" target="_blank">PDF.</a> --> 
+                            </p> 
                         </div>
                     </li>
 
@@ -846,7 +846,7 @@
                                 Akram Hakiri and Behnam Dezfouli. A Blockchain-Oriented SDN-aware Architecture for a Scalable Communication in IoT Network. Book Chapter in BLOCKCHAIN BASED INTERNET OF THINGS: Algorithms, Artichectures and Applications. Publisher: Springer Lecture Notes
                                 on Data Engineering and Communications Technologies.
                                 <a href="pdf/Placeholder-PDF.pdf" target="_blank">PDF.</a>
-                       -->
+                                -->
 
                                 Coming soon !
                                 <embed src="pdf/Placeholder-PDF.pdf" type="application/pdf" width="100%" height="800px" />
